# manta-rebalancer

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  Makefile  Makefile.postgres  README.md  agent-manifest.tmpl  rustfmt.toml  test.out
agent/: Cargo.toml
agent/src/: agent.rs  main.rs
boot/: configure.sh  rebalancer.sh  setup.sh
docs/: agent.md  manager.md  manager.md.bak  operators_guide.md  techreview.md
etc/: postgresql.conf
manager/: Cargo.toml  test.out
manager/src/: api_util.rs  config.json.in  config.rs  gotham_json_util.rs  lib.rs  main.rs  metrics.rs  moray_client.rs  pagination.rs  pg_db.rs  picker.rs  rebalancer-adm.rs  storinfo.rs  test_util.rs
manager/src/jobs/: evacuate.rs  mod.rs  status.rs
manager/testfiles/: test.out
manager/testfiles/1.stor/: shard_1.objs  shard_2.objs
manager/testfiles/objs/1.stor/: shard_1.objs  shard_2.objs
rebalancer/: Cargo.toml
rebalancer/src/: agent_test_util.rs  common.rs  error.rs  lib.rs  libagent.rs  metrics.rs  util.rs
sapi_manifests/agent/: manifest.json  template
sapi_manifests/rebalancer/: manifest.json  template
sapi_manifests/rebalancer/mako/: manifest.json  template
sapi_manifests/registrar/: manifest.json  template.json
smf/manifests/: postgresql.xml  rebalancer-agent.xml  rebalancer-manager.xml  rebalancer.xml
smf/methods/: postgresql
src/: agent-main.rs  agent.rs  common.rs  config.json  config.json.in  config.rs  error.rs  job.rs  job.rs.bak  lib.rs  main.rs  manager.rs  moray_client.rs  pagination.rs  pg_db.rs  picker.rs  server.rs  util.rs
src/jobs/: .status.rs.swp  evacuate.rs  mod.rs  status.rs
test/agent/: test_init.sh
test/agent/files/: area_codes_by_state.csv
tools/: sharkspitter-filter.js  sharkspitter.sh
