[package]
name = "agent"
version = "0.1.0"
edition = "2018"
workspace = ".."

[features]
# No features by default
default = []

[dependencies]
base64 = "0.10.1"
futures = "0.1.29"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.14"
joyent-rust-utils = { git = "https://github.com/TritonDataCenter/rust-utils", tag = "v0.2.0" }
lazy_static = "1.4.0"
libmanta = { git = "https://github.com/TritonDataCenter/rust-libmanta", tag = "v0.7.0" }
mime = "0.3.13"
moray = { git = "https://github.com/TritonDataCenter/rust-moray", tag = "v0.9.2" }
rebalancer = { path = "../rebalancer" }
reqwest = "0.9.24"
rusqlite = "0.19.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
threadpool = "1.8.1"
url = "1.7"
uuid = { version = "0.7.4", features = ["v4"] }
walkdir = "2"

[[bin]]
name = "rebalancer-agent"
path = "src/main.rs"
