[package]
name = "manager"
version = "0.5.2"
authors = ["Jenkins Agent <jenkins-agent@joyent.com>"]
edition = "2018"
workspace = ".."

[dependencies]
assert_cli = "0.6.3"
clap = "2.33.0"
crossbeam-channel = "0.4.2"
crossbeam-deque = "0.7.3"
futures = "0.1.29"
hyper = "0.12"
indoc = "0.3.5"
Inflector = "0.11.4"
lazy_static = "1.4.0"
libmanta = { git = "https://github.com/TritonDataCenter/rust-libmanta", features = ["postgres"], tag = "v0.7.0" }
mime = "0.3.13"
moray = { git = "https://github.com/TritonDataCenter/rust-moray", features = ["postgres"], tag = "v0.11.4" }
sharkspotter = { git = "https://github.com/TritonDataCenter/rust-sharkspotter", features = ["postgres"], tag = "v0.16.5" }
diesel = { version = "1.4.2", features = ["postgres"] }
rand = "0.7.0"
reqwest = "0.9.24"
strum = "0.16.0"
strum_macros = "0.16.0"
uuid = { version = "0.7.4", features = ["v4"] }
gotham = "0.4.0"
gotham_derive = "0.4.0"
prometheus = "0.7.0"
quickcheck = "0.8.5"
quickcheck_helpers = { git = "https://github.com/TritonDataCenter/rust-quickcheck-helpers.git", tag = "v0.1.0" }
rebalancer = { path = "../rebalancer", features = ["postgres"] }
serde_derive = "1.0.91"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
slog = "2.5.2"
slog-bunyan = { git = "https://github.com/slog-rs/bunyan" }
slog-scope = "4.1.2"
threadpool = "1.7.1"
resolve = "0.2.0"
signal-hook = "0.1.13"
failure = "0.1.8"
pg = {version = "0.17.5", package = "postgres"}

[dev-dependencies]
# Unfortuantely there is a long standing bug in mustache version 0.9.0 that has
# a fix which hasn't been integrated yet.  We are only using this for testing so
# it should be fine to grab this crate from the branch for now.
# https://github.com/nickel-org/rust-mustache/issues/60
mustache = {git = "https://github.com/rjloura/rust-mustache", branch = "issue-60" }
libc = "0.2.67"

[[bin]]
name = "rebalancer-manager"
path = "src/main.rs"

[[bin]]
name = "rebalancer-adm"
path = "src/rebalancer-adm.rs"
